---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: ??.01.2024
  Changes:
    - Statistics with tooltips now show the tooltip-info icon similar to vanilla.
  Compatibility:
    - Statistic entries now need to explicitly define the existance of a tooltip.
---------------------------------------------------------------------------------------------------
Version: 0.2.9
Date: 28.01.2024
  Compatibility:
    - Better compatibility with mods that add custom train stops.
  Changes:
    - Slightly change area formatting when the number is small.
    - Do not count trains on editor surfaces.
    - The command /show-victory-screen is now a start-up setting. Disabled by default.
    - (Internal) Harden gathering statistics from other mods even more.
---------------------------------------------------------------------------------------------------
Version: 0.2.8
Date: 15.01.2024
  Compatibility:
    - Mods can now force the victory, even if it has been reached before.
    - Mods can now specify a custom victory message. This message can optionally be different for winners and losers.
    - Added soft compatibility for some specific mods. This allows you to add Better Victory Screen
      to playthroughs to track your statistics. However, until full compatibility is added by the other 
      mod the vanilla screen will still be shown. This list currently includes:
        Space Exploration, Krastorio 2, SpaceMod, Pyanodons.
  Changes:
    - More consistent and safer formatting of numbers. Now with working unit tests.
    - Safer gathering of statistics from other mods by suppressing any crashes.
    - Add some Cargo Ships statistics.
  Bugfixes:
    - Always show Victory Screen to all players (even when in f.i. Editor Extensions lab).
---------------------------------------------------------------------------------------------------
Version: 0.2.7
Date: 11.01.2024
  Bugfixes: